# python_testing_project

./: README.md  main.py  pyproject.toml
.github/workflows/: coverage.yml  lint.yml  tests.yml
src/python_testing_project/: main.py
tests/: first_test.py  test_api.py
