[project]
name = "python-testing-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "coverage>=7.11.3",
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.3",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-watch>=4.2.0",
]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra"
    ]

testpaths = "tests"

markers = [
        "smoke: subset of tests"
]


[tool.flake8]
max-line-length = 88

count = true

exclude = [
    ".venv",
]
